trunk/Archive2/ae/e5d96a45ae603f/output
+ g++-4.9 -std=c++11 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
main.cpp: In function 'int main()':
main.cpp:38:12: error: call of overloaded 'g(<brace-enclosed initializer list>)' is ambiguous
     g({1,2}); // ok
            ^
main.cpp:38:12: note: candidates are:
main.cpp:26:6: note: void g(const Foo&)
 void g(Foo const &) {}
      ^
main.cpp:27:6: note: void g(const std::vector<Bar>&)
 void g(std::vector<Bar> const &) {}
      ^
